# rishta_assisten

./: .gitignore  Procfile  main.py  pyproject.toml  render.yaml  requirements.txt
