[project]
name = "marriage-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chainlit>=2.6.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.14",
    "openai-agents>=0.1.0",
    "requests>=2.32.4",
    "twilio>=9.6.5",
    "uvicorn>=0.35.0",
]

